# showroom

./: README.md
JDA/: README.md  classification.ipynb  common.py  pyproject.toml  tsne.ipynb
JDA/data/: association_rules.pkl  filtered_association_rules.pkl  frequent_item_sets.pkl  importances.pkl  skill_taxonomy.csv
JDA/model/: bow_tsne_2D.npy  bow_tsne_3D.npy
JDA/notebooks/: arm.ipynb  classification.ipynb  tsne.ipynb
NID/: README.md  common.py  common_cart.py  common_idtree.py  create_ip_encoder.py  create_netflow_statistics.py  pip_list.txt  pyproject.toml  rank_idtree.py  search_idtree.py  search_xgboost.py  search_xgboost_2.py  search_xgboost_3.py  train_default.py  train_idtree.py  train_xgboost.py  validate_models.py  validate_models_binary.py  viz_confusion_matrices.py  viz_test.py  viz_test_mod.py
NID/data/: test_connections.csv
NID/graphs/: network_visualization.py  test.csv  test_network_visualization.ipynb
NID/model/: idtree.pkl  idtree_netflow_sample_ext.pkl  xgboost.pkl  xgboost_default.pkl  xgboost_netflow_sample_ext.pkl  xgboost_netflow_sample_ext_default.pkl
NID/pipelines/: idtree.ipynb  idtree.py  xgboost.ipynb
NID/scores/: idtree_fhswfcnl.pkl  idtree_test.pkl  matrix_fhswfcnl_idtree_netflow_sample_ext.pkl  matrix_fhswfcnl_xgboost_netflow_sample_ext.pkl  matrix_test_idtree_netflow_sample_ext.pkl  matrix_test_xgboost_netflow_sample_ext.pkl  report_fhswfcnl_idtree_netflow_sample_ext.pkl  report_fhswfcnl_xgboost_netflow_sample_ext.pkl  report_test_idtree_netflow_sample_ext.pkl  report_test_xgboost_netflow_sample_ext.pkl  xgboost_test.pkl  (+1 more)
(+45 files in other folders)
