[tool.poetry]
name = "jda"
version = "0.1.0"
description = ""
authors = ["dmnc-grdnr <dmnc.crl.grdnr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
scikit-learn = "1.4.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
pandas = "^2.2.3"
tensorflow = "^2.18.0"
openpyxl = "^3.1.5"
mlxtend = "^0.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
