[tool.poetry]
name = "nid"
version = "0.1.0"
description = ""
authors = ["dmnc-grdnr <dmnc.crl.grdnr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
scikit-learn = "1.5.1"
xgboost = "2.1.3"
seaborn = "0.13.2"
scipy = "1.15.1"
igraph = "0.11.8"
pyarrow = "19.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
